--- a/src/main/resources/templates/footer/footer.html
+++ b/src/main/resources/templates/footer/footer.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <footer th:fragment="footer">
+<div class="footer-radius"></div>
 <div class="waves">
   <div class="wave" id="wave1"></div>
   <div class="wave" id="wave2"></div>
