--- a/src/main/resources/static/css/footer.css
+++ b/src/main/resources/static/css/footer.css
@@ -1,61 +1,67 @@
 * {
-  padding: 0;
-  margin: 0;
+	padding: 0;
+	margin: 0;
 }
 
 footer {
-  position: relative;
-  width: 100%;
-  margin-top: 10%;
-  background: var(--main);
-  min-height: 100px;
-  padding: 20px 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+	position: relative;
+	width: 100%;
+	margin-top: 10%;
+	background: var(--main);
+	min-height: 100px;
+	padding-bottom: 50px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 }
 
-footer .social-icon,
-footer .footer-menu {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 10px 0;
-  flex-wrap: wrap;
+footer .social-icon, footer .footer-menu {
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 10px 0;
+	flex-wrap: wrap;
 }
 
 footer .social-icon li a {
-  font-size: 2rem;
-  color: black;
-  margin: 0 10px;
-  display: inline-block;
-  transition: 0.5s;
+	font-size: 2rem;
+	color: black;
+	margin: 0 10px;
+	display: inline-block;
+	transition: 0.5s;
 }
 
 footer .footer-menu li a {
-  font-size: 1rem;
-  color: black;
-  margin: 0 10px;
-  display: inline-block;
-  transition: 0.5s;
-  opacity: 0.4;
+	font-size: 1rem;
+	color: black;
+	margin: 0 10px;
+	display: inline-block;
+	transition: 0.5s;
+	opacity: 0.4;
 }
 
-footer .social-icon li a:hover,
-footer .footer-menu li a:hover {
-  transform: translateY(-10px);
-  opacity: 1;
+footer .social-icon li a:hover, footer .footer-menu li a:hover {
+	transform: translateY(-10px);
+	opacity: 1;
 }
 
 footer p {
-  color: black;
-  text-align: center;
-  margin-top: 15px;
-  margin-bottom: 10px;
-  font-size: 1.1rem;
-  opacity: 0.8;
+	color: black;
+	text-align: center;
+	margin-top: 15px;
+	margin-bottom: 10px;
+	font-size: 1.1rem;
+	opacity: 0.8;
+}
+
+/* footer 모양 잡기 */
+.footer-radius {
+	width: 100%;
+	height: 50px;
+	background-color: var(--white);
+	border-radius: 0 0 50px 50px;
 }
 
 /*
