--- a/src/main/resources/templates/thymeleaf/Member/login.html
+++ b/src/main/resources/templates/thymeleaf/Member/login.html
@@ -55,7 +55,7 @@
 		<div class="row my-5">
 			<div class="col-md-5 mx-auto my-5">
 				<div class="row g-3 addMember_form p-4 rounded shadow my-5">
-					<h1>로그인</h1>
+					<h3>로그인</h3>
 					<div class="form-group">
 						<label for="id" class="form-label">아이디</label> <input type="text"
 							class="form-control" id="id" name="id">
@@ -66,7 +66,7 @@
 					</div>
 
 					<div class="col-12 mt-4 text-center">
-						<button type="submit" class="btn btn-main w-100 ">로그인하기</button>
+						<button type="submit" class="btn btn-main w-100 p-3 rounded-4">로그인하기</button>
 						<div class="row mt-2">
 							<div class="col my-3">
 								<a href="addMember" class="text-decoration-none">회원 가입 </a> | <a
