--- a/src/main/resources/static/css/search.css
+++ b/src/main/resources/static/css/search.css
@@ -26,7 +26,7 @@
 
 input[type="search" i] {
     width: 100%;
-    padding: 20px 40px;
+   /*  padding: 20px 40px; */
     border-radius: 50px;
 }
 
