--- a/src/main/resources/templates/thymeleaf/feed/feed2.html
+++ b/src/main/resources/templates/thymeleaf/feed/feed2.html
@@ -267,7 +267,11 @@
 					<div class="col-12 feed-box-bot p-3">
 						<span class="fw-bold mb-1">맥주 맛집🍺✨</span>
 						<span class="f13">
-							맥주는 왜 먹어도 먹어도 맛있을까요?
+							맥주는 왜 먹어도 먹어도 맛있을까요?어떤 맥주 좋아하세요? 저는 부드러운게 좋아요
+							그래서 생맥주가 좋아요 여기는 세부인데요
+							진짜 잘 찍었죠 진짜 제가 찍은 거예요 또 가고 싶어요
+							취업도 안 했는데 놀러 갈 생각하는 나 정상인가요?
+							비정상이여도 제 마음이 그런데 어떡해요
 						</span>
 					</div>
 					<!--feed box bot | text-->
@@ -398,7 +402,15 @@
 					<div class="col-12 feed-box-bot p-3">
 						<span class="fw-bold mb-1">맥주 맛집🍺✨</span>
 						<span class="f13">
-							맥주는 왜 먹어도 먹어도 맛있을까요?
+							맥주는 왜 먹어도 먹어도 맛있을까요?어떤 맥주 좋아하세요? 저는 부드러운게 좋아요
+							그래서 생맥주가 좋아요 여기는 세부인데요
+							진짜 잘 찍었죠 진짜 제가 찍은 거예요 또 가고 싶어요
+							취업도 안 했는데 놀러 갈 생각하는 나 정상인가요?
+							비정상이여도 제 마음이 그런데 어떡해요어떤 맥주 좋아하세요? 저는 부드러운게 좋아요
+							그래서 생맥주가 좋아요 여기는 세부인데요
+							진짜 잘 찍었죠 진짜 제가 찍은 거예요 또 가고 싶어요
+							취업도 안 했는데 놀러 갈 생각하는 나 정상인가요?
+							비정상이여도 제 마음이 그런데 어떡해요
 						</span>
 					</div>
 					<!--feed box bot | text-->
