--- a/src/main/resources/templates/thymeleaf/home/home.html
+++ b/src/main/resources/templates/thymeleaf/home/home.html
@@ -28,6 +28,7 @@
 	<!--파비콘영역 끝-->
 	<link rel="stylesheet" href="../css/common.css">
 	<link rel="stylesheet" href="../css/nav.css">
+	<link rel="stylesheet" href="../css/feed.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.css" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.autoplay.css" />
 	<link rel="stylesheet" href="../css/home.css">
