--- a/src/main/resources/templates/thymeleaf/info/info.html
+++ b/src/main/resources/templates/thymeleaf/info/info.html
@@ -55,188 +55,42 @@
 						</div>
 					</div>
 					<hr>
-					<div class="board">
-						<div class="row">
-							<div class="col-12 p-3">
-								<!--board-->
-								<div class="row">
+					<div class="board row">
+							<!--board-->
+								<div class="row " th:each = "list:${list}">
+								<a  th:href="@{'Event_view?id='+ ${list.getEvent_num()}}" class="row">
 									<div class="col-3 board-left">
-										<img src="../img/aicc/theme-cafe.jpg" class="img-fluid" alt="">
-										<span class="text-white f12">포레스트</span>
+										<img  th:src="@{'../img/info/' + ${list.getEvent_thumbnail()}}" class="img-fluid" alt="">
+										<span class="text-white f12" th:text="${list.getEvent_category()}"></span>
 									</div>
 									<div class="col">
 										<div class="row">
 											<div class="col">
-												<h5>어딘지 모르지만 뭔가 예쁜 카페</h5>
+												<h5 th:text="${list.getEvent_title()}"></h5>
 											</div>
 										</div>
 										<div class="row">
 											<div class="col-12">
 												<button type="button"
-													class="btn rounded-pill px-3 btn-light f14">경기</button>
+													class="btn rounded-pill px-3 btn-light f14" th:text="${list.getEvent_area()}"></button>
 												<button type="button"
-													class="btn rounded-pill px-3 btn-light f14">하남시</button>
+													class="btn rounded-pill px-3 btn-light f14" th:text="${list.getEvent_area2()}"></button>
 												<button type="button"
-													class="btn rounded-pill px-3 btn-light f14">#쇼핑</button>
+													class="btn rounded-pill px-3 btn-light f14" th:text="${list.getEvent_category()}">#</button>
 											</div>
 										</div>
 									</div>
-									<div class="col-1">
+									<div class="col-1 mb-1">
 										<img src="../img/info/btn_dot2.png" alt="">
 									</div>
+								<hr class="mt-3 ms-3">
+									</a>
 								</div>
-								<hr>
 								<!--------->
-								<!--board-->
-								<div class="row">
-									<div class="col-3 board-left">
-										<img src="../img/aicc/theme-park.jpg" class="img-fluid" alt="">
-										<span class="text-white f12">놀이공원</span>
-									</div>
-									<div class="col">
-										<div class="row">
-											<div class="col">
-												<h5>흔들다리 효과</h5>
-											</div>
-										</div>
-										<div class="row">
-											<div class="col-12">
-												<button type="button"
-													class="btn rounded-pill px-3 btn-light f14">경기</button>
-												<button type="button"
-													class="btn rounded-pill px-3 btn-light f14">하남시</button>
-												<button type="button"
-													class="btn rounded-pill px-3 btn-light f14">#데이트</button>
-											</div>
-										</div>
-									</div>
-									<div class="col-1">
-										<img src="../img/info/btn_dot2.png" alt="">
-									</div>
-								</div>
-								<hr>
-								<!--------->
-								<!--board-->
-								<div class="row">
-									<div class="col-3 board-left">
-										<img src="../img/aicc/theme-park.jpg" class="img-fluid" alt="">
-										<span class="text-white f12">놀이공원</span>
-									</div>
-									<div class="col">
-										<div class="row">
-											<div class="col">
-												<h5>흔들다리 효과</h5>
-											</div>
-										</div>
-										<div class="row">
-											<div class="col-12">
-												<button type="button"
-													class="btn rounded-pill px-3 btn-light f14">경기</button>
-												<button type="button"
-													class="btn rounded-pill px-3 btn-light f14">하남시</button>
-												<button type="button"
-													class="btn rounded-pill px-3 btn-light f14">#데이트</button>
-											</div>
-										</div>
-									</div>
-									<div class="col-1">
-										<img src="../img/info/btn_dot2.png" alt="">
-									</div>
-								</div>
-								<hr>
-								<!--------->
-								<!--board-->
-								<div class="row">
-									<div class="col-3 board-left">
-										<img src="../img/aicc/theme-park.jpg" class="img-fluid" alt="">
-										<span class="text-white f12">놀이공원</span>
-									</div>
-									<div class="col">
-										<div class="row">
-											<div class="col">
-												<h5>흔들다리 효과</h5>
-											</div>
-										</div>
-										<div class="row">
-											<div class="col-12">
-												<button type="button"
-													class="btn rounded-pill px-3 btn-light f14">경기</button>
-												<button type="button"
-													class="btn rounded-pill px-3 btn-light f14">하남시</button>
-												<button type="button"
-													class="btn rounded-pill px-3 btn-light f14">#데이트</button>
-											</div>
-										</div>
-									</div>
-									<div class="col-1">
-										<img src="../img/info/btn_dot2.png" alt="">
-									</div>
-								</div>
-								<hr>
-								<!--------->
-								<!--board-->
-								<div class="row">
-									<div class="col-3 board-left">
-										<img src="../img/aicc/theme-park.jpg" class="img-fluid" alt="">
-										<span class="text-white f12">놀이공원</span>
-									</div>
-									<div class="col">
-										<div class="row">
-											<div class="col">
-												<h5>흔들다리 효과</h5>
-											</div>
-										</div>
-										<div class="row">
-											<div class="col-12">
-												<button type="button"
-													class="btn rounded-pill px-3 btn-light f14">경기</button>
-												<button type="button"
-													class="btn rounded-pill px-3 btn-light f14">하남시</button>
-												<button type="button"
-													class="btn rounded-pill px-3 btn-light f14">#데이트</button>
-											</div>
-										</div>
-									</div>
-									<div class="col-1">
-										<img src="../img/info/btn_dot2.png" alt="">
-									</div>
-								</div>
-								<hr>
-								<!--------->
-								<!--board-->
-								<div class="row">
-									<div class="col-3 board-left">
-										<img src="../img/aicc/theme-park.jpg" class="img-fluid" alt="">
-										<span class="text-white f12">놀이공원</span>
-									</div>
-									<div class="col">
-										<div class="row">
-											<div class="col">
-												<h5>흔들다리 효과</h5>
-											</div>
-										</div>
-										<div class="row">
-											<div class="col-12">
-												<button type="button"
-													class="btn rounded-pill px-3 btn-light f14">경기</button>
-												<button type="button"
-													class="btn rounded-pill px-3 btn-light f14">하남시</button>
-												<button type="button"
-													class="btn rounded-pill px-3 btn-light f14">#데이트</button>
-											</div>
-										</div>
-									</div>
-									<div class="col-1">
-										<img src="../img/info/btn_dot2.png" alt="">
-									</div>
-								</div>
-								<hr>
-								<!--------->
+					
 							</div>
 						</div>
-					</div>
-				</div>
-				<!------------우측 (필터)------------->
+									<!------------우측 (필터)------------->
 				<div
 					class="col-12 col-md-5 order-1 order-md-2 bg-light mt-3 p-2 ms-md-2 order-1 rounded-4">
 					<!-- 새로고침 버튼 -->
@@ -284,9 +138,11 @@
 						</div>
 					</div>
 				</div>
+					</div>
+				</div>
+				
 			</div>
-		</div>
-	</div>
+	
 	<div th:replace="footer/footer::footer"></div>
 
 	<script
