2024-02-13 | 박검지 | 충돌로 인한 commit

--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -71,7 +71,8 @@ a.indent{
 	background-color: var(--main);
 }
 .btn-main:hover{
-	background-color: var(--mainbg);
+	border: 1px solid var(--main);
+	background-color: var(--white);
 }
 
 /* form 양식 */
