24-02-14 | 장창엽 | 밴드 만들기 insert, myBand 페이지로 이동태그 작성

--- a/src/main/resources/static/css/myBand.css
+++ b/src/main/resources/static/css/myBand.css
@@ -43,7 +43,7 @@ div.myBand_write_btn{
     height: 50px;
     background-color: #4796f0;
 }
-div.myBand_write_btn>span{
+div.myBand_write_btn span{
     display: block;
     color : white;
     font-size: 22px;
