--- a/src/main/resources/static/css/band.css
+++ b/src/main/resources/static/css/band.css
@@ -83,15 +83,22 @@ div.create_buttonBox+strong{
     font-size: 20px;
     text-align: center;
     position : relative;
-    top : 110px;
+    top : 50%;
 }
 /* 가입한 밴드 스타일  */
+div.join_band_item_imgBox{
+	width: 100%;
+    height: 65%;
+    overflow: hidden;
+}
 div.join_band_item>img {
     width: 100%;
-    height: 65%;
+    height: 100%;
+    background-position: center;
+ 	background-size: cover;   
 }
 div.join_band_item_text{
-    padding: 15px;
+    padding: 8px 10px;
 }
 
 div.join_band_item_text>strong{
@@ -103,6 +110,9 @@ div.join_band_item_text>strong{
 div.join_band_item_text>span{
     font-size: 1vw;
     color : #b3b3b3dd;
+}
+div.join_band_item_text>span>span{
+	color : #b3b3b3dd;
 }
 
 /* 밴드 추천 창 */
