--- a/src/main/resources/templates/thymeleaf/band/bandFeedWrite.html
+++ b/src/main/resources/templates/thymeleaf/band/bandFeedWrite.html
@@ -11,14 +11,15 @@
 <!-- include summernote css/js -->
 <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
-<script src="../js/band_write.js"></script>
-<link rel="stylesheet" href="../css/band_write.css">
+<script src="../js/bandFeedWrite.js"></script>
+<link rel="stylesheet" href="../css/bandFeedWrite.css">
 </head>
 <body>
-    <div class="band_write_wrapper">
-        <div class="band_write_form">
+    <div class="bandFeedWrite_wrapper">
+        <div class="bandFeedWrite_form">
             <form method="post">
                 <textarea id="summernote" name="editordata" rows="100"></textarea>
+                <input type="submit" name="doit" value="글쓰기" />
             </form>
         </div>
     </div>
